# QSInventory

./: Dockerfile  SEARCH_README.md  main.py  pyproject.toml  test_search.py
app/: crud.py  dependencies.py  models.py  schemas.py
app/routers/: inventory.py  locations.py  types.py
app/utils/: search_utils.py
migrations/models/: 4_20250728000842_None.py  5_20250728000859_history_id_to_email.py  6_20250728001000_add_search_vector.py  7_20250728021745_test_migrate.py  8_20250728021933_revert_test.py
